# SOT_TMbot

./: .gitignore  README.md  REQUIRED_FILES.md  TechTask.md  bot.py  config.py  pyproject.toml  test_data.py  ТЗ Бот Телеграм SOT.docx
handlers/: __init__.py  admin.py  create.py  manage.py  moderation.py  start.py
models/: __init__.py  database.py  listing.py
utils/: __init__.py  ai_helper.py  backup.py  backup_files.py  constants.py  formatters.py  helpers.py  keyboards.py
