[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "telegram>=0.0.1",
    "flask-wtf>=1.2.2",
    "sqlalchemy>=2.0.38",
    "python-dotenv>=1.0.1",
    "openai>=1.64.0",
    "python-telegram-bot[all,job-queue]>=21.10",
    "psutil>=7.0.0",
]
